Website test update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!doctype html>
+<html lang="en-US">
+    <head>
+        <title>Welcome to my portfolio!</title>
+        <!-- <link rel="stylesheet" href="/css/main.css">  Could add style sheet here -->
+        <!-- <script src="/js/script.js" defer> </script>  Or a script here -->
+    </head>
+    <body style="background-color: rgb(85, 85, 85);">
+        <div style="text-align: center;">
+            <p>My Portfolio</p>
+            <p>Some dummy text to fill up the page a little bit. I really like potatos, especially with some butter and maybe some bacon. Really freakin' good dude. All kinds of potatos too, french fries, baked, mashed, you name it.</p>
+        </div>
+
+    </body>
+</html>
