--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <!-- <link rel="stylesheet" href="/css/main.css">  Could add style sheet here -->
         <!-- <script src="/js/script.js" defer> </script>  Or a script here -->
     </head>
+    <div style="background-color: rgb(214, 214, 214); padding-bottom: 10px; position: sticky; top: 0;">
+        <nav style="position: sticky; margin: 0; top: 0; left: 0; display: inline-flex; align-items: flex-start;"> 
+            <a class="banner" href="/"><h1>Vaepyrcon</h1></a>
+            <a class="smallBanner" href="/tictactoe"><h1>Tic Tac Toe</h1></a>
+            <a class="smallBanner" href="/profile"><h1>Profile</h1></a>
+            <a class="smallBanner" href="/account"><h1>Login</h1></a>
+    
+        </nav>
+    </div>
     <body style="background-color: rgb(85, 85, 85);">
         <div style="text-align: center;">
             <p>My Portfolio</p>
