--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <title>Welcome to my portfolio!</title>
-        <!-- <link rel="stylesheet" href="/css/main.css">  Could add style sheet here -->
+        <link rel="stylesheet" href="/css/main.css">
         <!-- <script src="/js/script.js" defer> </script>  Or a script here -->
     </head>
     <div style="background-color: rgb(214, 214, 214); padding-bottom: 10px; position: sticky; top: 0;">
