--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <link rel="stylesheet" href="/main.css">
         <!-- <script src="/js/script.js" defer> </script>  Or a script here -->
     </head>
-    <div style="background-color: rgb(214, 214, 214); padding-bottom: 10px; position: sticky; top: 0;">
+    <div style="padding-bottom: 10px; position: sticky; top: 0;">
         <nav style="position: sticky; margin: 0; top: 0; left: 0; display: inline-flex; align-items: flex-start;"> 
             <a class="banner" href="/"><h1>About Me</h1></a>
             <a class="smallBanner" href="/tictactoe"><h1>Projects</h1></a>
             <a class="smallBanner" href="/profile"><h1>Professional</h1></a>
             <a class="smallBanner" href="/account"><h1>College</h1></a>
-    
+            <a class="backBanner"></a>
         </nav>
     </div>
     <body style="background-color: rgb(85, 85, 85);">
