--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
         <link rel="stylesheet" href="/main.css">
         <!-- <script src="/js/script.js" defer> </script>  Or a script here -->
     </head>
-    <div style="padding-bottom: 10px; position: sticky; top: 0;">
-        <nav style="position: sticky; margin: 0; top: 0; left: 0; display: inline-flex; align-items: flex-start;"> 
-            <a class="banner" href="/"><h1>About Me</h1></a>
-            <a class="smallBanner" href="/tictactoe"><h1>Projects</h1></a>
-            <a class="smallBanner" href="/profile"><h1>Professional</h1></a>
-            <a class="smallBanner" href="/account"><h1>College</h1></a>
-            <a class="backBanner"></a>
-        </nav>
-    </div>
-    <body style="background-color: rgb(85, 85, 85);">
+    <body style="background-color: rgb(98, 132, 148);">
+        <div style="padding-bottom: 10px; position: sticky; top: 0;">
+            <nav style="position: sticky; margin: 0; top: 0; left: 0; display: inline-flex; align-items: flex-start;"> 
+                <a class="banner" href="/"><h1>About Me</h1></a>
+                <a class="smallBanner" href="/projects"><h1>Projects</h1></a>
+                <a class="smallBanner" href="/professional"><h1>Professional</h1></a>
+                <a class="smallBanner" href="/college"><h1>College</h1></a>
+                <a class="backBanner"></a>
+            </nav>
+        </div>
         <div style="text-align: center;">
-            <p>My Portfolio</p>
-            <p>Some dummy text to fill up the page a little bit. I really like potatos, especially with some butter and maybe some bacon. Really freakin' good dude. All kinds of potatos too, french fries, baked, mashed, you name it.</p>
+            <p>About Me:</p>
+            <p style="text-align: left; font-size: 65%; margin-left: 7.5%; margin-right: 5%;">I am a software developer at Central Hudson and a Marist graduate with a Bachelor in Computer Science. 
+                At Central Hudson I work on the SAP system, primarily with ABAP. I'm also actively developing a personal website, www.vaepyrcon.net which uses Node.JS, HTML, CSS, Javascript, 
+                postgreSQL, RESTful api practices, and a Unity game exported to WebGL. See my college <a href="/college">portfolio</a> here.</p>   
         </div>
 
     </body>
