--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div style="text-align: center;">
             <p>About Me:</p>
-            <p style="text-align: left; font-size: 65%; margin-left: 7.5%; margin-right: 5%;">I am a software developer at Central Hudson and a Marist graduate with a Bachelor in Computer Science. 
+            <p style="text-align: left; margin-left: 15%; margin-right: 15%;">I am a software developer at Central Hudson and a Marist graduate with a Bachelor in Computer Science. 
                 At Central Hudson I work on the SAP system, primarily with ABAP. I'm also actively developing a personal website, www.vaepyrcon.net which uses Node.JS, HTML, CSS, Javascript, 
                 postgreSQL, RESTful api practices, and a Unity game exported to WebGL. See my college <a href="/college">portfolio</a> here.</p>   
         </div>
