--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body style="background-color: rgb(98, 132, 148);">
         <div style="padding-bottom: 10px; position: sticky; top: 0;">
             <nav style="position: sticky; margin: 0; top: 0; left: 0; display: inline-flex; align-items: flex-start; width: 100%;"> 
-                <a class="banner" href="/"><h1>About Me</h1></a>
+                <a class="banner" href="/"><h1 style="text-wrap: nowrap;">About Me</h1></a>
                 <a class="smallBanner" href="/projects"><h1>Projects</h1></a>
                 <a class="smallBanner" href="/professional"><h1>Professional</h1></a>
                 <a class="smallBanner" href="/college"><h1>College</h1></a>
