--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/main.css">
         <!-- <script src="/js/script.js" defer> </script>  Or a script here -->
     </head>
-    <body style="background-color: rgb(98, 132, 148);">
+    <body style="background-color: rgb(100, 135, 150);">
         <div style="padding-bottom: 10px; position: sticky; top: 0;">
             <nav style="position: sticky; margin: 0; top: 0; left: 0; display: inline-flex; align-items: flex-start; width: 100%;"> 
                 <a class="banner" href="/"><h1 style="text-wrap: nowrap;">About Me</h1></a>
@@ -15,11 +15,15 @@
                 <a class="backBanner"></a>
             </nav>
         </div>
-        <div style="text-align: center;">
-            <p>About Me:</p>
-            <p style="text-align: left; margin-left: 15%; margin-right: 15%;">I am a software developer at Central Hudson and a Marist graduate with a Bachelor in Computer Science. 
-                At Central Hudson I work on the SAP system, primarily with ABAP. I'm also actively developing a personal website, www.vaepyrcon.net which uses Node.JS, HTML, CSS, Javascript, 
-                postgreSQL, RESTful api practices, and a Unity game exported to WebGL. See my college <a href="/college">portfolio</a> here.</p>   
+        <div style="text-align: center; text-align: left; margin-left: 15%; margin-right: 15%; background-color: rgb(160, 175, 180); border-radius: 25px;">
+            <textBody style="margin: 25px;">
+                <p>About Me:</p>
+                <p>I am a software developer at Central Hudson and a Marist graduate with a Bachelor in Computer Science. 
+                    At Central Hudson I work on the SAP system, primarily with ABAP. I'm also actively developing a personal website, www.vaepyrcon.net which uses Node.JS, HTML, CSS, Javascript, 
+                    postgreSQL, RESTful api practices, and a Unity game exported to WebGL. See my college <a href="/college">portfolio</a> here.</p> 
+                <br>
+                <p>I am in the process of moving my portfolio from my personal website to this new domain name specifically for my portfolio. Please excuse my unpolished aesthetics.</p>
+            </textBody>
         </div>
 
     </body>
