--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <a class="backBanner"></a>
             </nav>
         </div>
-        <div style="text-align: center; text-align: left; margin-left: 15%; margin-right: 15%; background-color: rgb(160, 175, 180); border-radius: 25px;">
-            <textBody style="margin: 25px;">
+        <div style="text-align: center; text-align: left; margin-left: 15%; margin-right: 15%; background-color: rgb(160, 175, 180); border-radius: 25px; padding: 25px;">
+            <textBody>
                 <p>About Me:</p>
                 <p>I am a software developer at Central Hudson and a Marist graduate with a Bachelor in Computer Science. 
                     At Central Hudson I work on the SAP system, primarily with ABAP. I'm also actively developing a personal website, www.vaepyrcon.net which uses Node.JS, HTML, CSS, Javascript, 
