--- a/college.html
+++ b/college.html
@@ -18,9 +18,12 @@
         <div style="text-align: center; text-align: left; margin-left: 15%; margin-right: 15%; background-color: rgb(160, 175, 180); border-radius: 25px; padding: 25px;">
             <textBody>
                 <p>College:</p>
-                <p>Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. 
-                    Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text.
-                    Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text.</p> 
+                <p>I went to Marist college from 2020-2023 and I graduated with a Bachelor of Science in the field of Computer Science. While in college my courses often required a final project to be done, and the ones listed below are my most notable. 
+                    Firstly, I created a 6502 Processor emulator which could execute 6502 opCodes. In my next and last semester I created a compiler capable of reading an input file of a custom programming language and turning it into 6502 opCodes. 
+                    These two projects were my most difficult and also the most satisfying to complete and watch function. Writing code in a custom language, compiling it with a compiler I wrote, and then running that same code in my 6502 processor emulator 
+                    gave me a great feeling of accomplishment. When I finished these projects I intended to port them to my personal website as a way to show off their functionality, but I was too busy enjoying my last Summer break before work! Lastly, I 
+                    also participated in a Capstone group where my team took a psuedo 'work order' from a professor at Marist to create a prototype program.
+                </p> 
                 <br>
                 <p>I am in the process of moving my portfolio from my personal website to this new domain name specifically for my portfolio. Please excuse my unpolished aesthetics.</p>
             </textBody>
@@ -30,7 +33,7 @@
             <leftSide></leftSide>
             <middle>
                 <block style="background-color: rgb(160, 175, 180); border-radius: 10px;">
-                    <portion style="background-color: rgb(190, 190, 200); padding: 20px; border-radius: 10px; font-size: 175%;">
+                    <portion style="background-color: rgb(185, 190, 190); padding: 20px; border-radius: 10px; font-size: 175%;">
                         <h3>6502 Processor</h3>
                         <p> I wrote a 6502 Processor in Typescript capable of executing the opCodes found in <a href="/Instruction Set - Instruction Set.pdf">this</a> pdf file. <a href="https://github.com/Stubeans/6502Proc">Github Link.</a></p>
                         <p style="text-align: left; font-size: 75%; margin-left: 5%;"> About: </p>
@@ -44,7 +47,7 @@
                 </block>
                 <br>
                 <block style="background-color: rgb(160, 175, 180); border-radius: 10px;">
-                    <portion style="background-color: rgb(190, 190, 200); padding: 20px; border-radius: 10px; font-size: 175%;">
+                    <portion style="background-color: rgb(185, 190, 190); padding: 20px; border-radius: 10px; font-size: 175%;">
                         <h3>Compiler</h3>
                         <p> I wrote a custom Compiler in Java that compiles the following grammar in <a href="/grammar.pdf">this</a> pdf file. <a href="https://github.com/Stubeans/Compilers">Github Link.</a></p>
                         <p style="text-align: left; font-size: 75%; margin-left: 5%;"> About: </p>
@@ -60,7 +63,7 @@
                 </block>
                 <br>
                 <block style="background-color: rgb(160, 175, 180); border-radius: 10px;">
-                    <portion style="background-color: rgb(190, 190, 200); padding: 20px; border-radius: 10px; font-size: 175%;">
+                    <portion style="background-color: rgb(185, 190, 190); padding: 20px; border-radius: 10px; font-size: 175%;">
                         <h3>Capping i.e. Capstone</h3>
                         <p> I worked as a part of a team to develop a prototype of a business application for <a href="https://www.marist.edu/communication-arts/faculty/jennifer-robinette?gclid=Cj0KCQjwtO-kBhDIARIsAL6LorcERbZtNyXdreoeXe2FFnMp1BQrmUO5yTFTUlQ-9L3Fk0yGOPviKTUaAnapEALw_wcB&gclsrc=aw.ds">Dr. Robinette</a>, a professor at Marist. <a href="https://github.com/Stubeans/Power-Presenting-Notes">Github Link.</a></p>
                         <p style="text-align: left; font-size: 75%; margin-left: 5%;"> About: </p>
