--- a/professional.html
+++ b/professional.html
@@ -18,9 +18,11 @@
         <div style="text-align: center; text-align: left; margin-left: 15%; margin-right: 15%; background-color: rgb(160, 175, 180); border-radius: 25px; padding: 25px;">
             <textBody>
                 <p>Professional:</p>
-                <p>Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. 
-                    Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text.
-                    Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text.</p> 
+                <p>I started work at Central Hudson Gas & Electric in March of 2024 as a Jr. Systems Analyst. A more apt, non HR, description of my job would be Jr. SAP ABAP Developer. As of writing this I have worked at Central Hudson for a year and I have learned 
+                    quite a bit about Central Hudson's business practices and how we leverage SAP to facilitate steady, uninterupted service to our customers and end users. I work as a part of a team operating under the agile framework. I am given 
+                    defects to work on and I am expected to gather requirements and create a solution while maintaining business and coding standards. Central Hudson uses SAP's IS-U under which I work on the modules for customer service, device management, billing, 
+                    and finance. I also help to maintain the interfaces between SAP and our other solutions, like the website, using OData. I have participated in Company Projects pertaining to SAP such as our Dunning (Collections) program.
+                </p> 
                 <br>
                 <p>I am in the process of moving my portfolio from my personal website to this new domain name specifically for my portfolio. Please excuse my unpolished aesthetics.</p>
             </textBody>
