--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,7 @@
         <div style="text-align: center; text-align: left; margin-left: 15%; margin-right: 15%; background-color: rgb(160, 175, 180); border-radius: 25px; padding: 25px;">
             <textBody>
                 <p>Projects:</p>
-                <p>Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. 
-                    Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text.
-                    Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text. Placeholder text.</p> 
+                <p>I have not decided how to use this space yet.</p> 
                 <br>
                 <p>I am in the process of moving my portfolio from my personal website to this new domain name specifically for my portfolio. Please excuse my unpolished aesthetics.</p>
             </textBody>
