--- a/college.html
+++ b/college.html
@@ -79,5 +79,8 @@
             <rightSide></rightSide>
         </pageLayout>
         <br><br><br>
+        <nav class="footer">
+            <p style="text-align: center; position: sticky; margin: 0; bottom: 0; align-items: flex-start;">stuartcsmith.com</p>
+        </nav>
     </body>
 </html>
