--- a/professional.html
+++ b/professional.html
@@ -27,6 +27,11 @@
                 <p>I am in the process of moving my portfolio from my personal website to this new domain name specifically for my portfolio. Please excuse my unpolished aesthetics.</p>
             </textBody>
         </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        <nav class="footer">
+            <p style="text-align: center; position: sticky; margin: 0; bottom: 0; align-items: flex-start;">stuartcsmith.com</p>
+        </nav>
 
     </body>
 </html>
