--- a/college.html
+++ b/college.html
@@ -18,7 +18,7 @@
         <div style="text-align: center; text-align: left; margin-left: 15%; margin-right: 15%; background-color: rgb(160, 175, 180); border-radius: 25px; padding: 25px;">
             <textBody>
                 <p>College:</p>
-                <p>I went to Marist college from 2020-2023 and I graduated with a Bachelor of Science in the field of Computer Science. While in college my courses often required a final project to be done, and the ones listed below are my most notable. 
+                <p>I went to Marist College from 2020-2023 and I graduated with a Bachelor of Science in the field of Computer Science. While in college my courses often required a final project to be done, and the ones listed below are my most notable. 
                     Firstly, I created a 6502 Processor emulator which could execute 6502 opCodes. In my next and last semester I created a compiler capable of reading an input file of a custom programming language and turning it into 6502 opCodes. 
                     These two projects were my most difficult and also the most satisfying to complete and watch function. Writing code in a custom language, compiling it with a compiler I wrote, and then running that same code in my 6502 processor emulator 
                     gave me a great feeling of accomplishment. When I finished these projects I intended to port them to my personal website as a way to show off their functionality, but I was too busy enjoying my last Summer break before work! Lastly, I 
